sanitizing the form

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emailjs/browser": "^4.4.1",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sanitize-html": "^2.17.0",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
